--- a/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
@@ -1,16 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Ingest metadata into open metadata\n",
+    "\n",
+    "In this tutorial, we will show how to ingest metadata into open metadata\n",
+    "\n"
+   ],
+   "id": "7c7b3379c5ec65f7"
   }
  ],
  "metadata": {
