--- a/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
+++ b/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
@@ -582,6 +582,49 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-12-10T09:42:56.674938Z",
+     "start_time": "2024-12-10T09:42:56.608932Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "osm_ile_france_df.printSchema()",
+   "id": "5923e8289570dee5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- type: byte (nullable = true)\n",
+      " |-- latitude: double (nullable = true)\n",
+      " |-- longitude: double (nullable = true)\n",
+      " |-- nodes: array (nullable = true)\n",
+      " |    |-- element: long (containsNull = true)\n",
+      " |-- relations: array (nullable = true)\n",
+      " |    |-- element: struct (containsNull = true)\n",
+      " |    |    |-- id: long (nullable = true)\n",
+      " |    |    |-- relationType: byte (nullable = true)\n",
+      " |    |    |-- role: string (nullable = true)\n",
+      " |-- tags: map (nullable = true)\n",
+      " |    |-- key: string\n",
+      " |    |-- value: string (valueContainsNull = true)\n",
+      " |-- info: struct (nullable = true)\n",
+      " |    |-- version: integer (nullable = true)\n",
+      " |    |-- timestamp: timestamp (nullable = true)\n",
+      " |    |-- changeset: long (nullable = true)\n",
+      " |    |-- userId: integer (nullable = true)\n",
+      " |    |-- userName: string (nullable = true)\n",
+      " |    |-- visible: boolean (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 140
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-12-09T10:38:26.628552Z",
      "start_time": "2024-12-09T10:38:26.623702Z"
     }
