--- a/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
@@ -425,8 +425,7 @@
     "            return DataType.STRING\n",
     "        \n",
     "        else:\n",
-    "            print(f\"The input value {in_type} is an unknown type\")\n",
-    "            raise NotImplementedError\n",
+    "            return DataType.UNKNOWN\n",
     "    else:\n",
     "        print(f\"The input value {in_type} is not a valid string type\")\n",
     "        raise ValueError\n",
