--- a/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
@@ -94,10 +94,13 @@
     "from metadata.generated.schema.entity.services.connections.database.mysqlConnection import MysqlConnection\n",
     "from metadata.generated.schema.entity.services.databaseService import (DatabaseConnection, DatabaseService, DatabaseServiceType,)\n",
     "\n",
-    "db_service_name = \"Constances-Geography\"\n",
+    "\n",
+    "DB_SERVICE_NAME = \"Constances-Geography\"\n",
+    "DB_NAME = \"SNDS\"\n",
+    "SCHEMA_NAME = \"DCIR\"\n",
     "\n",
     "db_service = CreateDatabaseServiceRequest(\n",
-    "    name=db_service_name,\n",
+    "    name=DB_SERVICE_NAME,\n",
     "    serviceType=DatabaseServiceType.Mysql,\n",
     "    connection=DatabaseConnection(\n",
     "        config=MysqlConnection(\n",
