--- a/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
@@ -361,7 +361,7 @@
    "source": [
     "## 3. Link terms with target columns\n",
     "\n",
-    "Now we need to link terms "
+    "The terms in glossary has been created, now we need to associate the terms with matched columns. "
    ],
    "id": "96e444eb37031d3e"
   },
@@ -370,8 +370,115 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "from metadata.generated.schema.entity.data.glossaryTerm import GlossaryTerm\n",
+    "\n",
+    "\n",
+    "def search_constance_column_name(tab_col_path: str, target_col_name: str):\n",
+    "    \"\"\"\n",
+    "    This function read the constances_vars, find all rows that contains the\n",
+    "    target column name. return a list of all match table column pair\n",
+    "    :param tab_col_path:\n",
+    "    :type tab_col_path:\n",
+    "    :param target_col_name:\n",
+    "    :type target_col_name:\n",
+    "    :return:\n",
+    "    :rtype:\n",
+    "    \"\"\"\n",
+    "    res_tab_col = []\n",
+    "    col_df = pd.read_csv(tab_col_path,header=0)\n",
+    "    target_tab_col = col_df[col_df[\"var\"] == target_col_name]\n",
+    "    if len(target_tab_col) > 0:\n",
+    "        for index, row in target_tab_col.iterrows():\n",
+    "            res_tab_col.append({\n",
+    "                \"table\": row[\"table\"],\n",
+    "                \"column\": row[\"var\"],\n",
+    "            })\n",
+    "\n",
+    "    return res_tab_col\n",
+    "\n",
+    "\n",
+    "def get_glossary_term_by_fqn(om_conn, term_fqn: str) -> GlossaryTerm:\n",
+    "    \"\"\"\n",
+    "    This function takes a term fully qualified name and returns a corresponding term entity. If the target term does\n",
+    "    not exist or not valid, return None.\n",
+    "    :param om_conn:\n",
+    "    :type om_conn:\n",
+    "    :param term_fqn:\n",
+    "    :type term_fqn:\n",
+    "    :return:\n",
+    "    :rtype:\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        term_entity = om_conn.get_by_name(entity=GlossaryTerm, fqn=term_fqn)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Can not find the target term, or the term is not valid: {e}\")\n",
+    "        raise\n",
+    "    return term_entity\n",
+    "\n",
+    "\n",
+    "def patch_term_to_column(om_conn, term_fqn: str, db_fqn: str, tab_name: str, column_name: str):\n",
+    "    # get the target table entity which contains the target column\n",
+    "    table_entity = om_conn.get_by_name(entity=Table, fqn=f\"{db_fqn}.{tab_name}\")\n",
+    "    # get the term entity\n",
+    "    term_entity = get_glossary_term_by_fqn(om_conn, term_fqn)\n",
+    "    # build a tag label with the given term entity\n",
+    "    tag_label = TagLabel(tagFQN=term_entity.fullyQualifiedName, source=TagSource.Glossary, state=State.Suggested,\n",
+    "                         labelType=LabelType.Automated)\n",
+    "    col_tag = ColumnTag(column_fqn=f\"{db_fqn}.{tab_name}.{column_name}\", tag_label=tag_label)\n",
+    "\n",
+    "    if col_tag:\n",
+    "        om_conn.patch_column_tags(table=table_entity,\n",
+    "                                  column_tags=[col_tag],\n",
+    "                                  operation=PatchOperation.ADD, )"
+   ],
    "id": "7cac5028c00d241c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "db_fqn = f\"{DB_SERVICE_NAME}.{DB_NAME}.{SCHEMA_NAME}\"\n",
+    "    # 1. Build OM context\n",
+    "    # 1.1 create an om connection\n",
+    "    om_conn = get_om_connection(SERVER_URL, om_admin_token)\n",
+    "    # 1.2 Test the server health\n",
+    "    if not om_conn.health_check():\n",
+    "        logger.error(\"The target open metadata server is not available\")\n",
+    "        raise RuntimeError(\"The target open metadata server is not available\")\n",
+    "    logger.info(\"The target open metadata server is available\")\n",
+    "\n",
+    "    # 3. Loop through all rows in the snds_nomenclature.csv\n",
+    "    nom_df = pd.read_csv(nomen_spec_path).drop_duplicates(subset=[\"nomenclature\"])\n",
+    "    for index, row in nom_df.iterrows():\n",
+    "        term_name, _, linked_cols = parse_nomenclature_row(row, desc_dir_path)\n",
+    "        logger.info(f\"treating term: {term_name}\")\n",
+    "        # find linked table column via term name\n",
+    "        term_linked_tab_cols = search_snds_column_name(col_path, term_name)\n",
+    "        # for each linked col, add term to the column\n",
+    "        for term_linked_tab_col in term_linked_tab_cols:\n",
+    "            patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, term_linked_tab_col[\"table\"],\n",
+    "                                 term_linked_tab_col[\"column\"])\n",
+    "        # find linked table column via linked_cols\n",
+    "        if len(linked_cols) > 0:\n",
+    "            for linked_col in linked_cols:\n",
+    "                col_linked_tab_cols = search_snds_column_name(col_path, linked_col)\n",
+    "                # for each find table column, add tag\n",
+    "                for col_linked_tab_col in col_linked_tab_cols:\n",
+    "                    patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, col_linked_tab_col[\"table\"],\n",
+    "                                         col_linked_tab_col[\"column\"])"
+   ],
+   "id": "a47857d893d147e8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3c0004a5e0d0ed81"
   }
  ],
  "metadata": {
