--- a/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/01.Ingest_basic_entities.ipynb
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T08:40:23.342138Z",
-     "start_time": "2024-12-10T08:40:23.225952Z"
+     "end_time": "2024-12-11T13:56:54.092159Z",
+     "start_time": "2024-12-11T13:56:50.891390Z"
     }
    },
    "cell_type": "code",
@@ -96,8 +96,9 @@
     "\n",
     "\n",
     "DB_SERVICE_NAME = \"Constances-Geography\"\n",
-    "DB_NAME = \"SNDS\"\n",
-    "SCHEMA_NAME = \"DCIR\"\n",
+    "DB_NAME = \"hospitals_in_france\"\n",
+    "SCHEMA_NAME = \"Geography\"\n",
+    "\n",
     "\n",
     "db_service = CreateDatabaseServiceRequest(\n",
     "    name=DB_SERVICE_NAME,\n",
@@ -115,8 +116,20 @@
     "db_service_entity = metadata.create_or_update(data=db_service)"
    ],
    "id": "2e37614cb861d481",
-   "outputs": [],
-   "execution_count": 4
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'metadata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 24\u001B[0m\n\u001B[0;32m     11\u001B[0m db_service \u001B[38;5;241m=\u001B[39m CreateDatabaseServiceRequest(\n\u001B[0;32m     12\u001B[0m     name\u001B[38;5;241m=\u001B[39mDB_SERVICE_NAME,\n\u001B[0;32m     13\u001B[0m     serviceType\u001B[38;5;241m=\u001B[39mDatabaseServiceType\u001B[38;5;241m.\u001B[39mMysql,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     20\u001B[0m     ),\n\u001B[0;32m     21\u001B[0m )\n\u001B[0;32m     23\u001B[0m \u001B[38;5;66;03m# when we create an entity by using function `create_or_update`, it returns the created instance of the query\u001B[39;00m\n\u001B[1;32m---> 24\u001B[0m db_service_entity \u001B[38;5;241m=\u001B[39m \u001B[43mmetadata\u001B[49m\u001B[38;5;241m.\u001B[39mcreate_or_update(data\u001B[38;5;241m=\u001B[39mdb_service)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'metadata' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -130,7 +143,7 @@
     "from metadata.generated.schema.api.data.createDatabase import CreateDatabaseRequest\n",
     "\n",
     "db_entity_req = CreateDatabaseRequest(\n",
-    "    name=\"Geography\",\n",
+    "    name=DB_NAME,\n",
     "    service=db_service_entity.fullyQualifiedName,\n",
     "    description=\"In this database, we store all tables which contain geographical information in Constances\",\n",
     ")\n",
@@ -153,7 +166,7 @@
     "from metadata.generated.schema.api.data.createDatabaseSchema import CreateDatabaseSchemaRequest\n",
     "\n",
     "create_schema_req = CreateDatabaseSchemaRequest(\n",
-    "    name=\"hospitals_in_france\", \n",
+    "    name=SCHEMA_NAME, \n",
     "    database=db_entity.fullyQualifiedName,\n",
     "    description=\"In this schema, we group all tables which contain geographical information of hospitals in France\",)\n",
     "\n",
@@ -581,7 +594,7 @@
    "execution_count": null,
    "source": [
     "service_id = metadata.get_by_name(\n",
-    "    entity=DatabaseService, fqn=db_service_name\n",
+    "    entity=DatabaseService, fqn=DB_SERVICE_NAME\n",
     ").id\n",
     "\n",
     "metadata.delete(\n",
