--- a/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
@@ -371,6 +371,19 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "DB_SERVICE_NAME=\"Constances-Geography\"\n",
+    "DB_NAME = \"hospitals_in_france\"\n",
+    "SCHEMA_NAME = \"Geography\"\n",
+    "glossary_name = \"Constances\""
+   ],
+   "id": "30360bf75e069c88"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "from metadata.generated.schema.entity.data.glossaryTerm import GlossaryTerm\n",
     "\n",
     "\n",
@@ -440,35 +453,31 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "db_fqn = f\"{DB_SERVICE_NAME}.{DB_NAME}.{SCHEMA_NAME}\"\n",
-    "    # 1. Build OM context\n",
-    "    # 1.1 create an om connection\n",
-    "    om_conn = get_om_connection(SERVER_URL, om_admin_token)\n",
-    "    # 1.2 Test the server health\n",
-    "    if not om_conn.health_check():\n",
-    "        logger.error(\"The target open metadata server is not available\")\n",
-    "        raise RuntimeError(\"The target open metadata server is not available\")\n",
-    "    logger.info(\"The target open metadata server is available\")\n",
     "\n",
-    "    # 3. Loop through all rows in the snds_nomenclature.csv\n",
-    "    nom_df = pd.read_csv(nomen_spec_path).drop_duplicates(subset=[\"nomenclature\"])\n",
-    "    for index, row in nom_df.iterrows():\n",
-    "        term_name, _, linked_cols = parse_nomenclature_row(row, desc_dir_path)\n",
-    "        logger.info(f\"treating term: {term_name}\")\n",
-    "        # find linked table column via term name\n",
-    "        term_linked_tab_cols = search_snds_column_name(col_path, term_name)\n",
-    "        # for each linked col, add term to the column\n",
-    "        for term_linked_tab_col in term_linked_tab_cols:\n",
-    "            patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, term_linked_tab_col[\"table\"],\n",
-    "                                 term_linked_tab_col[\"column\"])\n",
-    "        # find linked table column via linked_cols\n",
-    "        if len(linked_cols) > 0:\n",
-    "            for linked_col in linked_cols:\n",
-    "                col_linked_tab_cols = search_snds_column_name(col_path, linked_col)\n",
-    "                # for each find table column, add tag\n",
-    "                for col_linked_tab_col in col_linked_tab_cols:\n",
-    "                    patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, col_linked_tab_col[\"table\"],\n",
-    "                                         col_linked_tab_col[\"column\"])"
+    "\n",
+    "db_fqn = f\"{DB_SERVICE_NAME}.{DB_NAME}.{SCHEMA_NAME}\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. Loop through all rows in the snds_nomenclature.csv\n",
+    "nom_df = pd.read_csv(nomen_spec_path).drop_duplicates(subset=[\"nomenclature\"])\n",
+    "for index, row in nom_df.iterrows():\n",
+    "    term_name, _, linked_cols = parse_nomenclature_row(row, desc_dir_path)\n",
+    "    print(f\"treating term: {term_name}\")\n",
+    "    # find linked table column via term name\n",
+    "    term_linked_tab_cols = search_constance_column_name(col_path, term_name)\n",
+    "    # for each linked col, add term to the column\n",
+    "    for term_linked_tab_col in term_linked_tab_cols:\n",
+    "        patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, term_linked_tab_col[\"table\"],\n",
+    "                             term_linked_tab_col[\"column\"])\n",
+    "    # find linked table column via linked_cols\n",
+    "    if len(linked_cols) > 0:\n",
+    "        for linked_col in linked_cols:\n",
+    "            col_linked_tab_cols = search_constance_column_name(col_path, linked_col)\n",
+    "            # for each find table column, add tag\n",
+    "            for col_linked_tab_col in col_linked_tab_cols:\n",
+    "                patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, col_linked_tab_col[\"table\"],\n",
+    "                                     col_linked_tab_col[\"column\"])"
    ],
    "id": "a47857d893d147e8"
   },
