--- a/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/02.Create_glossary_terms.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-10T12:51:59.939446Z",
-     "start_time": "2024-12-10T12:51:55.517228Z"
+     "end_time": "2024-12-11T14:58:25.414223Z",
+     "start_time": "2024-12-11T14:58:21.096415Z"
     }
    },
    "source": [
@@ -26,13 +26,13 @@
     "from metadata.generated.schema.type.tagLabel import TagLabel, TagSource, State, LabelType"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T12:52:01.827602Z",
-     "start_time": "2024-12-10T12:52:01.767621Z"
+     "end_time": "2024-12-11T14:58:26.240869Z",
+     "start_time": "2024-12-11T14:58:26.186880Z"
     }
    },
    "cell_type": "code",
@@ -49,13 +49,13 @@
    ],
    "id": "192bc36f1c47ca26",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T12:52:02.618004Z",
-     "start_time": "2024-12-10T12:52:02.597930Z"
+     "end_time": "2024-12-11T14:58:27.723365Z",
+     "start_time": "2024-12-11T14:58:27.705094Z"
     }
    },
    "cell_type": "code",
@@ -71,18 +71,18 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:52:51.376259Z",
-     "start_time": "2024-12-10T13:52:51.328628Z"
+     "end_time": "2024-12-11T14:58:29.661626Z",
+     "start_time": "2024-12-11T14:58:29.650529Z"
     }
    },
    "cell_type": "code",
@@ -103,7 +103,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -118,19 +118,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:52:53.525782Z",
-     "start_time": "2024-12-10T13:52:53.516336Z"
+     "end_time": "2024-12-11T14:58:36.156257Z",
+     "start_time": "2024-12-11T14:58:36.150693Z"
     }
    },
    "cell_type": "code",
    "source": [
     "nomen_spec_path = f\"{metadata_path}/constances_nomenclatures.csv\"\n",
+    "column_spec_path = f\"{metadata_path}/constances_vars.csv\"\n",
     "desc_dir_path = f\"{metadata_path}/nomenclature_values\"\n",
     "nomen_om_term_out_path = f\"{metadata_path}/om_nomenclatures.csv\""
    ],
    "id": "14eea3c367a1460d",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "metadata": {
@@ -194,8 +195,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:23:47.068708Z",
-     "start_time": "2024-12-10T14:23:47.055216Z"
+     "end_time": "2024-12-11T14:59:07.828018Z",
+     "start_time": "2024-12-11T14:59:07.814385Z"
     }
    },
    "cell_type": "code",
@@ -349,8 +350,12 @@
    "source": [
     "## 2. Ingest the nomenclature\n",
     "\n",
+    "\n",
     "For now, no api has been found, so we load the term via GUI. Follow the tutorial in the below url\n",
     "https://docs.open-metadata.org/latest/how-to-guides/data-governance/glossary/import\n",
+    "\n",
+    "1. Create a glossary called \"constances_geo_terms\"\n",
+    "2. Insert the generated om_nomenclatures.csv \n",
     "\n"
    ],
    "id": "5fa242434e9a4780"
@@ -366,28 +371,36 @@
    "id": "96e444eb37031d3e"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:00:13.777977Z",
+     "start_time": "2024-12-11T16:00:13.766644Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "DB_SERVICE_NAME=\"Constances-Geography\"\n",
-    "DB_NAME = \"hospitals_in_france\"\n",
-    "SCHEMA_NAME = \"Geography\"\n",
-    "glossary_name = \"Constances\""
+    "DB_NAME = \"Geography\"\n",
+    "SCHEMA_NAME = \"hospitals_in_france\"\n",
+    "glossary_name = \"constances_geo_terms\""
    ],
-   "id": "30360bf75e069c88"
+   "id": "30360bf75e069c88",
+   "outputs": [],
+   "execution_count": 45
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:00:14.688786Z",
+     "start_time": "2024-12-11T16:00:14.675894Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from metadata.generated.schema.entity.data.glossaryTerm import GlossaryTerm\n",
     "\n",
     "\n",
-    "def search_constance_column_name(tab_col_path: str, target_col_name: str):\n",
+    "def search_constance_column_name(tab_col_path: str, target_col_name: str)->list:\n",
     "    \"\"\"\n",
     "    This function read the constances_vars, find all rows that contains the\n",
     "    target column name. return a list of all match table column pair\n",
@@ -403,9 +416,10 @@
     "    target_tab_col = col_df[col_df[\"var\"] == target_col_name]\n",
     "    if len(target_tab_col) > 0:\n",
     "        for index, row in target_tab_col.iterrows():\n",
+    "            row_dict = row.to_dict()\n",
     "            res_tab_col.append({\n",
-    "                \"table\": row[\"table\"],\n",
-    "                \"column\": row[\"var\"],\n",
+    "                \"table\": row_dict[\"table\"],\n",
+    "                \"column\": row_dict[\"var\"],\n",
     "            })\n",
     "\n",
     "    return res_tab_col\n",
@@ -432,9 +446,16 @@
     "\n",
     "def patch_term_to_column(om_conn, term_fqn: str, db_fqn: str, tab_name: str, column_name: str):\n",
     "    # get the target table entity which contains the target column\n",
-    "    table_entity = om_conn.get_by_name(entity=Table, fqn=f\"{db_fqn}.{tab_name}\")\n",
+    "    table_fqn = f\"{db_fqn}.{tab_name}\"\n",
+    "    table_entity = om_conn.get_by_name(entity=Table, fqn=table_fqn)\n",
     "    # get the term entity\n",
     "    term_entity = get_glossary_term_by_fqn(om_conn, term_fqn)\n",
+    "    if not table_entity:\n",
+    "        print(f\"Can't find the table entity: {table_fqn} \")\n",
+    "        return \n",
+    "    if not term_entity:\n",
+    "        print(f\"Can't find the term entity: {term_fqn} \")\n",
+    "        return \n",
     "    # build a tag label with the given term entity\n",
     "    tag_label = TagLabel(tagFQN=term_entity.fullyQualifiedName, source=TagSource.Glossary, state=State.Suggested,\n",
     "                         labelType=LabelType.Automated)\n",
@@ -445,41 +466,121 @@
     "                                  column_tags=[col_tag],\n",
     "                                  operation=PatchOperation.ADD, )"
    ],
-   "id": "7cac5028c00d241c"
+   "id": "7cac5028c00d241c",
+   "outputs": [],
+   "execution_count": 46
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:00:15.099248Z",
+     "start_time": "2024-12-11T16:00:15.077757Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "\n",
-    "\n",
+    "resu_list=search_constance_column_name(column_spec_path,\"geometry\")\n",
+    "print(resu_list)"
+   ],
+   "id": "c4b7c3dbab8583f4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'table': 'fr_communes_raw', 'column': 'geometry'}, {'table': 'fr_communes_clean', 'column': 'geometry'}, {'table': 'hospitals_in_communes', 'column': 'geometry'}]\n"
+     ]
+    }
+   ],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:00:15.465309Z",
+     "start_time": "2024-12-11T16:00:15.454963Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# define the target database fqn\n",
     "db_fqn = f\"{DB_SERVICE_NAME}.{DB_NAME}.{SCHEMA_NAME}\"\n",
     "\n",
-    "\n",
-    "\n",
-    "# 3. Loop through all rows in the snds_nomenclature.csv\n",
-    "nom_df = pd.read_csv(nomen_spec_path).drop_duplicates(subset=[\"nomenclature\"])\n",
+    "# get nomenlature df\n",
+    "nom_df = pd.read_csv(nomen_spec_path,header=0).drop_duplicates(subset=[\"nomenclature\"])\n",
+    "print(nom_df.head(5))"
+   ],
+   "id": "a47857d893d147e8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    nomenclature                                              titre  \\\n",
+      "0  geometry_type  The description of possible type values in a g...   \n",
+      "1     code_insee  The administrative code of a french commune is...   \n",
+      "\n",
+      "  variables_liees  nombre_lignes  \n",
+      "0        geometry            NaN  \n",
+      "1           insee            NaN  \n"
+     ]
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:00:16.548254Z",
+     "start_time": "2024-12-11T16:00:15.789137Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "for index, row in nom_df.iterrows():\n",
-    "    term_name, _, linked_cols = parse_nomenclature_row(row, desc_dir_path)\n",
+    "    row_dict = row.to_dict()\n",
+    "    print(row_dict)\n",
+    "    term_name, _, linked_cols = parse_nomenclature_row(row_dict, desc_dir_path)\n",
     "    print(f\"treating term: {term_name}\")\n",
     "    # find linked table column via term name\n",
-    "    term_linked_tab_cols = search_constance_column_name(col_path, term_name)\n",
+    "    term_linked_tab_cols = search_constance_column_name(column_spec_path, term_name)\n",
+    "    print(term_linked_tab_cols)\n",
     "    # for each linked col, add term to the column\n",
     "    for term_linked_tab_col in term_linked_tab_cols:\n",
-    "        patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, term_linked_tab_col[\"table\"],\n",
+    "        print(f\"target column: {term_linked_tab_col}\")\n",
+    "        patch_term_to_column(metadata, f\"{glossary_name}.{term_name}\", db_fqn, term_linked_tab_col[\"table\"],\n",
     "                             term_linked_tab_col[\"column\"])\n",
     "    # find linked table column via linked_cols\n",
+    "    print(linked_cols)\n",
     "    if len(linked_cols) > 0:\n",
     "        for linked_col in linked_cols:\n",
-    "            col_linked_tab_cols = search_constance_column_name(col_path, linked_col)\n",
+    "            print(linked_col)\n",
+    "            col_linked_tab_cols = search_constance_column_name(column_spec_path, linked_col)\n",
     "            # for each find table column, add tag\n",
     "            for col_linked_tab_col in col_linked_tab_cols:\n",
-    "                patch_term_to_column(om_conn, f\"{glossary_name}.{term_name}\", db_fqn, col_linked_tab_col[\"table\"],\n",
+    "                patch_term_to_column(metadata, f\"{glossary_name}.{term_name}\", db_fqn, col_linked_tab_col[\"table\"],\n",
     "                                     col_linked_tab_col[\"column\"])"
    ],
-   "id": "a47857d893d147e8"
+   "id": "3c0004a5e0d0ed81",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nomenclature': 'geometry_type', 'titre': 'The description of possible type values in a geometry column', 'variables_liees': 'geometry', 'nombre_lignes': nan}\n",
+      "treating term: geometry_type\n",
+      "[]\n",
+      "['geometry']\n",
+      "geometry\n",
+      "{'nomenclature': 'code_insee', 'titre': 'The administrative code of a french commune issued by INSEE ', 'variables_liees': 'insee', 'nombre_lignes': nan}\n",
+      "treating term: code_insee\n",
+      "[]\n",
+      "['insee']\n",
+      "insee\n"
+     ]
+    }
+   ],
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -487,7 +588,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3c0004a5e0d0ed81"
+   "id": "3c2f9e1cf8f3db73"
   }
  ],
  "metadata": {
